
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int my_set ;
typedef int cpu_set_t ;


 int CLONE_NEWNET ;
 int CLONE_NEWUSER ;
 int CPU_SET (int ,int *) ;
 int CPU_ZERO (int *) ;
 int EXIT_FAILURE ;
 int dprintf (char*) ;
 int exit (int ) ;
 int getgid () ;
 int getuid () ;
 scalar_t__ sched_setaffinity (int ,int,int *) ;
 scalar_t__ system (char*) ;
 scalar_t__ unshare (int ) ;
 int write_file (char*,char*,...) ;

void setup_sandbox() {
 int real_uid = getuid();
 int real_gid = getgid();

 if (unshare(CLONE_NEWUSER) != 0) {
  dprintf("[!] unprivileged user namespaces are not available\n");
  dprintf("[-] unshare(CLONE_NEWUSER)\n");
  exit(EXIT_FAILURE);
 }
 if (unshare(CLONE_NEWNET) != 0) {
  dprintf("[-] unshare(CLONE_NEWUSER)\n");
  exit(EXIT_FAILURE);
 }

 if (!write_file("/proc/self/setgroups", "deny")) {
  dprintf("[-] write_file(/proc/self/set_groups)\n");
  exit(EXIT_FAILURE);
 }
 if (!write_file("/proc/self/uid_map", "0 %d 1\n", real_uid)) {
  dprintf("[-] write_file(/proc/self/uid_map)\n");
  exit(EXIT_FAILURE);
 }
 if (!write_file("/proc/self/gid_map", "0 %d 1\n", real_gid)) {
  dprintf("[-] write_file(/proc/self/gid_map)\n");
  exit(EXIT_FAILURE);
 }

 cpu_set_t my_set;
 CPU_ZERO(&my_set);
 CPU_SET(0, &my_set);
 if (sched_setaffinity(0, sizeof(my_set), &my_set) != 0) {
  dprintf("[-] sched_setaffinity()\n");
  exit(EXIT_FAILURE);
 }

 if (system("/sbin/ifconfig lo mtu 1500") != 0) {
  dprintf("[-] system(/sbin/ifconfig lo mtu 1500)\n");
  exit(EXIT_FAILURE);
 }
 if (system("/sbin/ifconfig lo up") != 0) {
  dprintf("[-] system(/sbin/ifconfig lo up)\n");
  exit(EXIT_FAILURE);
 }
}
