; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_47169.c_setup_sandbox.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_47169.c_setup_sandbox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CLONE_NEWUSER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [52 x i8] c"[!] unprivileged user namespaces are not available\0A\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"[-] unshare(CLONE_NEWUSER)\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@CLONE_NEWNET = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [21 x i8] c"/proc/self/setgroups\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"deny\00", align 1
@.str.4 = private unnamed_addr constant [39 x i8] c"[-] write_file(/proc/self/set_groups)\0A\00", align 1
@.str.5 = private unnamed_addr constant [19 x i8] c"/proc/self/uid_map\00", align 1
@.str.6 = private unnamed_addr constant [8 x i8] c"0 %d 1\0A\00", align 1
@.str.7 = private unnamed_addr constant [36 x i8] c"[-] write_file(/proc/self/uid_map)\0A\00", align 1
@.str.8 = private unnamed_addr constant [19 x i8] c"/proc/self/gid_map\00", align 1
@.str.9 = private unnamed_addr constant [36 x i8] c"[-] write_file(/proc/self/gid_map)\0A\00", align 1
@.str.10 = private unnamed_addr constant [25 x i8] c"[-] sched_setaffinity()\0A\00", align 1
@.str.11 = private unnamed_addr constant [27 x i8] c"/sbin/ifconfig lo mtu 1500\00", align 1
@.str.12 = private unnamed_addr constant [40 x i8] c"[-] system(/sbin/ifconfig lo mtu 1500)\0A\00", align 1
@.str.13 = private unnamed_addr constant [21 x i8] c"/sbin/ifconfig lo up\00", align 1
@.str.14 = private unnamed_addr constant [34 x i8] c"[-] system(/sbin/ifconfig lo up)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setup_sandbox() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 (...) @getuid()
  store i32 %4, i32* %1, align 4
  %5 = call i32 (...) @getgid()
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* @CLONE_NEWUSER, align 4
  %7 = call i64 @unshare(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %0
  %10 = call i32 @dprintf(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @dprintf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  %12 = load i32, i32* @EXIT_FAILURE, align 4
  %13 = call i32 @exit(i32 %12) #3
  unreachable

14:                                               ; preds = %0
  %15 = load i32, i32* @CLONE_NEWNET, align 4
  %16 = call i64 @unshare(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %14
  %19 = call i32 @dprintf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  %20 = load i32, i32* @EXIT_FAILURE, align 4
  %21 = call i32 @exit(i32 %20) #3
  unreachable

22:                                               ; preds = %14
  %23 = call i32 (i8*, i8*, ...) @write_file(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %29, label %25

25:                                               ; preds = %22
  %26 = call i32 @dprintf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.4, i64 0, i64 0))
  %27 = load i32, i32* @EXIT_FAILURE, align 4
  %28 = call i32 @exit(i32 %27) #3
  unreachable

29:                                               ; preds = %22
  %30 = load i32, i32* %1, align 4
  %31 = call i32 (i8*, i8*, ...) @write_file(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.6, i64 0, i64 0), i32 %30)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %37, label %33

33:                                               ; preds = %29
  %34 = call i32 @dprintf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.7, i64 0, i64 0))
  %35 = load i32, i32* @EXIT_FAILURE, align 4
  %36 = call i32 @exit(i32 %35) #3
  unreachable

37:                                               ; preds = %29
  %38 = load i32, i32* %2, align 4
  %39 = call i32 (i8*, i8*, ...) @write_file(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.8, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.6, i64 0, i64 0), i32 %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %45, label %41

41:                                               ; preds = %37
  %42 = call i32 @dprintf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.9, i64 0, i64 0))
  %43 = load i32, i32* @EXIT_FAILURE, align 4
  %44 = call i32 @exit(i32 %43) #3
  unreachable

45:                                               ; preds = %37
  %46 = call i32 @CPU_ZERO(i32* %3)
  %47 = call i32 @CPU_SET(i32 0, i32* %3)
  %48 = call i64 @sched_setaffinity(i32 0, i32 4, i32* %3)
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %54

50:                                               ; preds = %45
  %51 = call i32 @dprintf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.10, i64 0, i64 0))
  %52 = load i32, i32* @EXIT_FAILURE, align 4
  %53 = call i32 @exit(i32 %52) #3
  unreachable

54:                                               ; preds = %45
  %55 = call i64 @system(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.11, i64 0, i64 0))
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %57, label %61

57:                                               ; preds = %54
  %58 = call i32 @dprintf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.12, i64 0, i64 0))
  %59 = load i32, i32* @EXIT_FAILURE, align 4
  %60 = call i32 @exit(i32 %59) #3
  unreachable

61:                                               ; preds = %54
  %62 = call i64 @system(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.13, i64 0, i64 0))
  %63 = icmp ne i64 %62, 0
  br i1 %63, label %64, label %68

64:                                               ; preds = %61
  %65 = call i32 @dprintf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.14, i64 0, i64 0))
  %66 = load i32, i32* @EXIT_FAILURE, align 4
  %67 = call i32 @exit(i32 %66) #3
  unreachable

68:                                               ; preds = %61
  ret void
}

declare dso_local i32 @getuid(...) #1

declare dso_local i32 @getgid(...) #1

declare dso_local i64 @unshare(i32) #1

declare dso_local i32 @dprintf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @write_file(i8*, i8*, ...) #1

declare dso_local i32 @CPU_ZERO(i32*) #1

declare dso_local i32 @CPU_SET(i32, i32*) #1

declare dso_local i64 @sched_setaffinity(i32, i32, i32*) #1

declare dso_local i64 @system(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
